[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "rust-code-analysis"
version = "0.1.0"
description = "Python bindings for rust-code-analysis: compute code metrics using tree-sitter"
readme = "README_PYTHON.md"
license = { text = "MPL-2.0" }
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Topic :: Software Development :: Quality Assurance",
]
keywords = ["metrics", "code-analysis", "complexity", "tree-sitter", "cyclomatic", "halstead"]

[project.urls]
Homepage = "https://github.com/Droidcraft/rust-code-analysis"
Repository = "https://github.com/Droidcraft/rust-code-analysis"
Upstream = "https://github.com/mozilla/rust-code-analysis"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "rust_code_analysis"
